--- a/assets/style.css
+++ b/assets/style.css
@@ -1,35 +1,61 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: rgb(50, 50, 56);
 }
 
 body {
     display: flex;
     flex-direction: column;
-    background: rgb(168, 221, 252);
 }
 
 header {
-    background: linear-gradient(blue, navy);
     width: 100%;
-
+    display: flex;
+    justify-content: space-between;
+    /* big struggle with setting up header, must do "justify content space between" to separate title to left
+    and nav buttons to right */
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
 }
 
 .navbar {
     display: flex;
-    flex-direction: row;
+    flex-direction:row;
     flex-wrap: wrap;
     justify-content: flex-end;
+    align-items: center;
 }
 
 .nav-button {
+    display: flex;
     padding: 40px;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 500;
+    text-decoration: none;
     color: white;
+}
 
+.page-title {
+    color: white;
+    display: flex;
+    align-self: flex-start;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 15px 15px 30px;
 }
 
 
+.nav-button {
+    transition: all 0.3s ease 0s;
+}
+
+.nav-button:hover {
+    color: rgb(0, 162, 255);
+}
 
 @media screen and (max-width 786px) {
     .navbar {
