--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,8 @@
+:root {
+    --dark: black;
+}
+
+
 * {
     font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
@@ -12,11 +17,12 @@ body {
 }
 
 header {
-    width: 100%;
     display: flex;
     justify-content: space-between;
     /* big struggle with setting up header, must do "justify content space between" to separate title to left
-    and nav buttons to right */
+    and nav buttons to right (this only works for 2 children in parent container) */
+    /* if 3 or more children in parent container (header), set header to "justify content flex end" to push 
+    everything to the far right, then set margin "right: 0"on child item that you want on the left  */
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
@@ -24,14 +30,9 @@ header {
 
 .navbar {
     display: flex;
-    flex-direction:row;
-    flex-wrap: wrap;
-    justify-content: flex-end;
-    align-items: center;
 }
 
 .nav-button {
-    display: flex;
     padding: 40px;
     font-size: 20px;
     font-weight: 500;
@@ -42,12 +43,11 @@ header {
 .page-title {
     color: white;
     display: flex;
-    align-self: flex-start;
     flex-direction: column;
     align-items: center;
     padding: 20px 15px 15px 30px;
+    margin-left: 25px;
 }
-
 
 .nav-button {
     transition: all 0.3s ease 0s;
@@ -56,6 +56,16 @@ header {
 .nav-button:hover {
     color: rgb(0, 162, 255);
 }
+
+.mission-statement {
+    height: 200px;
+    text-align: center;
+    margin-top: 50px;
+    line-height: 1.5;
+    color:rgb(241, 223, 128)
+}
+
+
 
 @media screen and (max-width 786px) {
     .navbar {
