--- a/assets/style.css
+++ b/assets/style.css
@@ -60,12 +60,33 @@ header {
 .mission-statement {
     height: 200px;
     text-align: center;
-    margin-top: 50px;
+    margin-top: 100px;
     line-height: 1.5;
     color:rgb(241, 223, 128)
 }
 
+#about-me {
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 20px 0;
+    margin: 20px 0;
+    color: white;
+}
 
+#about-me h2 {
+    margin: 0 20px;
+}
+
+#about-me img {
+    display: flex;
+    justify-content: flex-end;
+    width: 200px;
+    height: auto;
+    border-radius: 50%;
+    margin: 0 20px;
+}
 
 @media screen and (max-width 786px) {
     .navbar {
